GNOME Bugzilla – Bug 743827
Fix build of GListModel (on Visual Studio)
Last modified: 2015-02-02 10:18:00 UTC
Hi, In the definition of _GListModelInterface (in glistmodel.h), there is the use of "interface" in one of the members of the structure, which is a reserved word in Visual Studio, which would break the build. I will attach a very simple patch in a bit that fixes this build problem (and the test of the API passes with it). With blessings, thank you in advance.
Created attachment 295914 [details] [review] Fix definition of _GListModelInterface in glistmodel.h Hi, Please see the patch. With blessings, thank you!
Is this a problem even in C mode?
Hello Ryan, It is, .c files are treated as C mode by default. With blessings.
(In reply to comment #2) > Is this a problem even in C mode? yeah, one of the win32 headers does #define interface struct
Committed with a small tweak: usually we call this 'g_iface'. Thanks!